--- a/style.css
+++ b/style.css
@@ -46,6 +46,20 @@ html{
 .BCKgray    {   background-color: var(--Col_GrayLight);     }
 .BCKwhite   {   background-color: var(--Col_White);         }
 .BCKmain    {   background-color: var(--Col_Main);          }
-.BCKgrad    {   background-image: linear-gradient(45deg,var(--Col_Main),var(--Col_Sec));}
+.BCKgrad    {   background-image: linear-gradient(45deg,var(--Col_Main)var(--Col_Sec));}
+.shadow     {   box-shadow: 0px 0px 20px #E1E4ED;}
 /* Colors>>_________________________________________________________ */
 
+/* BoxModel<<_______________________________________________________ */
+.m0         {   margin:  0px;    }
+.p0         {   padding: 0px;    }
+.mp0        {   margin:  0px; padding: 0px;    }
+.m0child *  {   margin:  0px;    }
+/* BoxModel>>_______________________________________________________ */
+
+/* Generic<<________________________________________________________ */
+body{
+    margin: 0px;
+}
+li{ list-style: none;}
+/* Generic<<________________________________________________________ */
