--- a/style.css
+++ b/style.css
@@ -38,9 +38,11 @@ html{
     --Col_White:        white;
 }
 /* TXT */
-.TXTmainDark    {   color: var(--Col_MainDark); }
-.TXTgray        {   color: var(--Col_Gray);     }
-.TXTwhite       {   color: var(--Col_White);    }
+.TXTmain        {   color: var(--Col_Main);         }
+.TXTmainDark    {   color: var(--Col_MainDark);     }
+.TXTgray        {   color: var(--Col_Gray);         }
+.TXTwhite       {   color: var(--Col_White);        }
+.TXThighlight   {   color: var(--Col_Highlight);    }
 
 /* BCK */
 .BCKgray    {   background-color: var(--Col_GrayLight);     }
@@ -48,6 +50,7 @@ html{
 .BCKmain    {   background-color: var(--Col_Main);          }
 .BCKgrad    {   background-image: linear-gradient(45deg,var(--Col_Main)var(--Col_Sec));}
 .shadow     {   box-shadow: 0px 0px 20px #E1E4ED;}
+.alpha70    {   opacity: 0.7;   }
 /* Colors>>_________________________________________________________ */
 
 /* BoxModel<<_______________________________________________________ */
@@ -71,13 +74,16 @@ html{
 body{
     margin: 0px;
 }
-li{ list-style: none; padding-left: 0px;}
+li  {   list-style: none; padding-left: 0px;    }
+a   {   text-decoration: none;  }
 /* Generic<<________________________________________________________ */
 .button{
     background-image: linear-gradient(45deg,var(--Col_Main)var(--Col_Sec));
     color: white;
     padding: 12px 25px;
     border-radius: 25px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
 }
 /* Navbar<<________________________________________________________ */
 
