--- a/style.css
+++ b/style.css
@@ -128,3 +128,8 @@ menu a          {   font-weight: 700; color: var(--Col_MainDark); padding-top: 4
 #buttonchoice{padding: 4px 7px;}
 .ulcenter{display: flex; justify-content: center; width:100%;}
 /* Prices<<_________________________________________________________ */
+
+/* Testimonial<<_________________________________________________________ */
+#testimonial{max-width: 750px;}
+#colorball{width: 100px; height: 100px; border-radius: 50%;}
+/* Testimonial<<_________________________________________________________ */
