--- a/style.css
+++ b/style.css
@@ -76,10 +76,10 @@ html{
 body{
     margin: 0px;
 }
-ul li   {   line-height: 2rem;      }
+ul li   {   line-height: 2rem;          }
 li      {   list-style: none; padding-left: 0px; }
-a       {   text-decoration: none;  }
-hr{border: 0px; height: 2px;}
+a       {   text-decoration: none;      }
+hr      {   border: 0px; height: 2px;   }
 .sepdown    {   margin-bottom: 120px;   }
 /* Generic<<________________________________________________________ */
 .button{
@@ -91,6 +91,7 @@ hr{border: 0px; height: 2px;}
     font-weight: 500;
     margin-top: 50px;
     margin-right: 20px;
+    display: inline-block;
 }
 .linkPink:hover{ color: var(--Col_Sec);}
 /* Background Images */
@@ -131,7 +132,7 @@ menu li:hover   {   border-top: 2px solid var(--Col_Main);  }
 .priceblock     {   box-sizing: border-box; padding: 60px 50px; flex: 0 30%;  }
 .priceblock>p:nth-child(4){margin: 2px 0px;}
 #buttonchoice   {   padding: 4px 7px; border-radius: 10px;}
-.ulcenter       {   display: flex; justify-content: center; width:100%; margin: 30px 0px 40px 0px;   }
+.ulcenter       {   display: flex; justify-content: center; width:100%; margin: 30px 0px 0px 0px;   }
 #price hr       {   border-top: 2px solid var(--Col_Sec); width: 40px; margin: 0;   }
 .prix           {   margin: 20px 0px 0px 0px; line-height: 3rem;   }
 /* Prices<<_________________________________________________________ */
@@ -145,17 +146,16 @@ menu li:hover   {   border-top: 2px solid var(--Col_Main);  }
 /* Testimonial<<_________________________________________________________ */
 
 /* Services<<_________________________________________________________ */
+#services               { min-height: 600px;}
 #serviceLeft            { flex: 0 66%;  }
 #serviceRight           { flex: 0 30%;  }
 #serviceRight>header    {    margin-bottom: 80px;    }
 #serviceLeft>div        { flex: 0 47%;  }
-#serviceLeft>div:first-child    { padding-bottom: 30px; }
-#serviceLeft>div:nth-child()    { padding-top: 30px;    }
-.servBlock                      { min-height:230px;     }
-.servBlock:first-child          { margin-bottom: 30px; padding: 100px 30px 50px 30px; }
+.servBlock                      { min-height:230px;  padding: 80px 30px 20px 30px; box-sizing: border-box; border-radius: 10px;   }
+.servBlock:first-child          { margin-bottom: 30px; }
 .servBlock>p:last-child         { display: none;        }
-.servBlock:hover>p:last-child   { display: block;       }
-.servBlock:hover    {background-image: linear-gradient(45deg,var(--Col_Main),var(--Col_Sec)); padding: 50px 30px;}
+.servBlock:hover>p:last-child   { display: block; margin-top: 35px;      }
+.servBlock:hover    {background-image: linear-gradient(45deg,var(--Col_Main),var(--Col_Sec)); padding: 30px 30px;}
 .servBlock:hover *              { color: var(--Col_White);  }
 /* Services<<_________________________________________________________ */
 
