--- a/style.css
+++ b/style.css
@@ -94,7 +94,10 @@ hr      {   border: 0px; height: 2px;   }
     margin-right: 20px;
     display: inline-block;
 }
-.linkPink:hover{ color: var(--Col_Sec);}
+.ButtonBox   {   width: 100%; align-items: end;}
+.ButtonBox div:nth-child(2){ padding-bottom: 12px;}
+
+.linkPink:hover{ color: var(--Col_Highlight);}
 /* Background Images */
 .logo{
     width: 119px;
@@ -109,20 +112,19 @@ hr      {   border: 0px; height: 2px;   }
     background-repeat: no-repeat;
     background-size: contain;
 } */
-/* #mainheader{
-    background-image: linear-gradient(45deg,red,blue);
-    background-position: right;
-    background-repeat: no-repeat;
-    background-size: contain;
-} */
+
 
 /* Navbar<<________________________________________________________ */
-#navbar>div {  flex: 0 15%;   margin-top: 18px  }
+#navbar>div {  flex: 0 15%;   margin-top: 18px  } 
 menu            {   height: 46px; flex: 0 50%;  }
-menu li         {   align-self: flex-end; padding: 28px 10px 0px 10px; padding-bottom: 10px; }
-menu li:hover a {   font-weight: 700; color: var(--Col_MainDark); padding-top: 40px;}
-menu li:hover   {   border-top: 2px solid var(--Col_Main);  }
-/* Navbar<<________________________________________________________ */
+menu li         {   align-self: flex-end; padding: 26px 10px 10px 10px;}
+menu li:hover a {   font-weight: 700; color: var(--Col_MainDark); padding: 15px 0px 0px 0px;}
+menu li:hover   {
+    border-width:   2px;
+    border-style:   solid;
+    border-image:   linear-gradient(    to right,   var(--Col_Main),    var(--Col_Sec)  ) 100% 0 0 0;
+}
+/* Navbar<<______________________________________
 
 /* Title<<_________________________________________________________ */
 #title  {   max-width: 436px;   }
@@ -168,18 +170,19 @@ menu li:hover   {   border-top: 2px solid var(--Col_Main);  }
     border-radius: 300px 300px 300px 150px;
 }
 #communityR     {    flex: 0 40%;}
-#commuButtons   {   width: 100%; align-items: end;}
-#commuButtons div:nth-child(2){ padding-bottom: 12px;}
 /* Community>>_________________________________________________________ */
 
 /* Subscribe<<_________________________________________________________ */
-#subscribe{ padding: 25px; border-radius: 10px;}
+#subscribe{ padding:15px 25px; border-radius: 10px;}
 #sendButton {   border: 2px solid white; padding: 15px 30px; color: white; border-radius: 30px;}
 /* Subscribe<<_________________________________________________________ */
 
 /* Footer<<____________________________________________________________ */
+#footbar        {   align-items: stretch;  }
+#footbar .logo        {   margin-bottom: 16px;  }
+#footbar hr     {   justify-self: end;  }
 #footbar>*      {   flex: 0 30%;   }
-.linklist       {   flex: 0 50%;   }
 footer hr       {   border-top: 2px solid #D8D8D8; width: 80px; }
 #copyright      {   margin-top: 40px;   }
+#links>p:first-child , #footContact>p:first-child {   margin-top: 0px;}
 /* Footer<<____________________________________________________________ */
