--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ html{
 /* BoxModel>>_______________________________________________________ */
 
 /* Container<<______________________________________________________ */
-.container  {   max-width: 1140px; margin: 0px auto;   }
+.container  {   max-width: 1140px; margin: 0px auto; padding: 0px 10px;  }
 /* Container>>______________________________________________________ */
 
 /* Flex<<______________________________________________________ */
@@ -105,17 +105,23 @@ hr      {   border: 0px; height: 2px;   }
     background-image: url("./img/Logo-White.svg");
     background-repeat: no-repeat;
     background-size: contain;
+    mix-blend-mode: multiply;
 }
-/* #mainheader{
+#mainheader{
     background-image: url("./img/shape.svg");
-    background-position: right;
+    background-position: right 0 top 0%;
     background-repeat: no-repeat;
-    background-size: contain;
-} */
+    background-size:  1000px;
+}
+.decalUP{
+    position: relative;
+    top: -600px;
+    }
 
 
 /* Navbar<<________________________________________________________ */
-#navbar>div {  flex: 0 15%;   margin-top: 18px  } 
+/* #navbar {background-color: rgba(255, 255, 255, 0.40); border-radius: 10px;} */
+#navbar>div {  flex: 0 15%;   margin-top: 18px; background-color: white;}
 menu            {   height: 46px; flex: 0 50%;  }
 menu li         {   align-self: flex-end; padding: 26px 10px 10px 10px;}
 menu li:hover a {   font-weight: 700; color: var(--Col_MainDark); padding: 15px 0px 0px 0px;}
@@ -127,7 +133,8 @@ menu li:hover   {
 /* Navbar<<______________________________________
 
 /* Title<<_________________________________________________________ */
-#title  {   max-width: 436px;   }
+#title {background-color: rgba(255, 255, 255, 0.40);}
+#title  {   max-width: 436px;  padding: 0px 20px;  }
 #title>header{   padding-top: 300px; padding-bottom: 300px;  }
 /* Title<<_________________________________________________________ */
 
@@ -141,11 +148,29 @@ menu li:hover   {
 /* Prices<<_________________________________________________________ */
 
 /* Testimonial<<_________________________________________________________ */
-#testimonial    {   max-width: 750px; padding:80px 0px;  }
+#testimonial    {   max-width: 750px; padding: 0px 20px; }
 #testimonial>h2 {   margin-bottom: 0px;}
 #testimonial>p:nth-child(4) {   margin-bottom: 0px;}
 #testimonial>p:nth-child(5) {   margin-top: 2px;}
-#colorball      {   width: 100px; height: 100px; border-radius: 50%; margin-top: 40px;   }
+#colorball      {   width: 100px; height: 100px; border-radius: 50%; margin-top: 40px;
+background-image: url("./img/testimonialGuy.jpg");
+background-position: center;
+background-size: cover;
+}
+#testimonialC   {   min-height: 600px;  }
+#testimonialBCK{
+    background-image: url("./img/city2.jpg");
+    background-position: bottom 0 left 10%;
+    background-repeat: no-repeat;
+    background-size:  cover;
+    mask-image: url("./img/shape1.svg"),url("./img/shape2.svg");
+    mask-mode: luminance;
+    mask-position: bottom 0 left 10%,right 0 top 0%;
+    mask-repeat: no-repeat, no-repeat;
+    mask-size:  240px, 670px;
+    height: 600px;
+
+}
 /* Testimonial<<_________________________________________________________ */
 
 /* Services<<_________________________________________________________ */
@@ -168,6 +193,9 @@ menu li:hover   {
     min-height: 474px ;
     min-Width:  650px ;
     border-radius: 300px 300px 300px 150px;
+    background-image: url("./img/city1.jpg");
+    background-position: center;
+    background-size: cover;
 }
 #communityR     {    flex: 0 40%;}
 /* Community>>_________________________________________________________ */
