--- a/style.css
+++ b/style.css
@@ -285,6 +285,10 @@ footer hr       {   border-top: 2px solid #D8D8D8; width: 80px; }
     #footleft     {  display: none;}
     #links , #footContact {   flex: 0 48%;}
 }
+/* S landscape _________________________________________________________________________________*/
+@media (orientation: landscape) and (max-width: 767.98px) {
+    #title>header{   margin-top: 50px;}
+}
 
 /* XS _________________________________________________________________________________*/
 @media (max-width: 575.98px) {
